--- a/pr-preview/pr-45/CODE_OF_CONDUCT.html
+++ b/pr-preview/pr-45/CODE_OF_CONDUCT.html
@@ -42,9 +42,9 @@ ul.task-list li input[type="checkbox"] {
 <link href="site_libs/quarto-html/quarto-syntax-highlighting-ed96de9b727972fe78a7b5d16c58bf87.css" rel="stylesheet" class="quarto-color-scheme-extra" id="quarto-text-highlighting-styles">
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="site_libs/bootstrap/bootstrap-8fd1faf6fd93e4e6d207ae0f9db51d78.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme" id="quarto-bootstrap" data-mode="light">
-<link href="site_libs/bootstrap/bootstrap-dark-e7f4145358ce1d0cd37d8d374dbb44f9.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme quarto-color-alternate" id="quarto-bootstrap" data-mode="dark">
-<link href="site_libs/bootstrap/bootstrap-8fd1faf6fd93e4e6d207ae0f9db51d78.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme-extra" id="quarto-bootstrap" data-mode="light">
+<link href="site_libs/bootstrap/bootstrap-df175dff5e0603d307760d170d784760.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme" id="quarto-bootstrap" data-mode="light">
+<link href="site_libs/bootstrap/bootstrap-dark-700321e9dc9119e5e0d8e5dad4aa54f3.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme quarto-color-alternate" id="quarto-bootstrap" data-mode="dark">
+<link href="site_libs/bootstrap/bootstrap-df175dff5e0603d307760d170d784760.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme-extra" id="quarto-bootstrap" data-mode="light">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -255,6 +255,31 @@ ul.task-list li input[type="checkbox"] {
   <span class="navbar-toggler-icon"></span>
 </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav navbar-nav-scroll me-auto">
+  <li class="nav-item">
+    <a class="nav-link active" href="./man/rpt-package.html" aria-current="page"> 
+<span class="menu-text">Documentation</span></a>
+  </li>  
+  <li class="nav-item dropdown ">
+    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-articles" role="link" data-bs-toggle="dropdown" aria-expanded="false">
+ <span class="menu-text">Articles</span>
+    </a>
+    <ul class="dropdown-menu" aria-labelledby="nav-menu-articles">    
+        <li>
+    <a class="dropdown-item" href="./vignettes/getting-started.html">
+ <span class="dropdown-text">Getting started</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./vignettes/quarto_vignette.html">
+ <span class="dropdown-text">Intro vignette</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./vignettes/articles/quarto_article.html">
+ <span class="dropdown-text">Advanced</span></a>
+  </li>  
+    </ul>
+  </li>
+</ul>
             <ul class="navbar-nav navbar-nav-scroll ms-auto">
   <li class="nav-item compact">
     <a class="nav-link" href="https://github.com/UCD-SERG/rpt"> <i class="bi bi-github" role="img" aria-label="rpt GitHub">
@@ -346,6 +371,12 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">example_function</span></a>
   </div>
 </li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./man/rpt-package.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">rpt-package</span></a>
+  </div>
+</li>
       </ul>
   </li>
         <li class="sidebar-item">
@@ -382,24 +413,24 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#contributor-covenant-code-of-conduct" id="toc-contributor-covenant-code-of-conduct" class="nav-link active" data-scroll-target="#contributor-covenant-code-of-conduct"><span class="header-section-number">1</span> Contributor Covenant Code of Conduct</a>
+  <li><a href="#contributor-covenant-code-of-conduct" id="toc-contributor-covenant-code-of-conduct" class="nav-link active" data-scroll-target="#contributor-covenant-code-of-conduct">Contributor Covenant Code of Conduct</a>
   <ul class="collapse">
-  <li><a href="#our-pledge" id="toc-our-pledge" class="nav-link" data-scroll-target="#our-pledge"><span class="header-section-number">1.1</span> Our Pledge</a></li>
-  <li><a href="#our-standards" id="toc-our-standards" class="nav-link" data-scroll-target="#our-standards"><span class="header-section-number">1.2</span> Our Standards</a></li>
-  <li><a href="#enforcement-responsibilities" id="toc-enforcement-responsibilities" class="nav-link" data-scroll-target="#enforcement-responsibilities"><span class="header-section-number">1.3</span> Enforcement Responsibilities</a></li>
-  <li><a href="#scope" id="toc-scope" class="nav-link" data-scroll-target="#scope"><span class="header-section-number">1.4</span> Scope</a></li>
-  <li><a href="#enforcement" id="toc-enforcement" class="nav-link" data-scroll-target="#enforcement"><span class="header-section-number">1.5</span> Enforcement</a></li>
-  <li><a href="#enforcement-guidelines" id="toc-enforcement-guidelines" class="nav-link" data-scroll-target="#enforcement-guidelines"><span class="header-section-number">1.6</span> Enforcement Guidelines</a>
+  <li><a href="#our-pledge" id="toc-our-pledge" class="nav-link" data-scroll-target="#our-pledge">Our Pledge</a></li>
+  <li><a href="#our-standards" id="toc-our-standards" class="nav-link" data-scroll-target="#our-standards">Our Standards</a></li>
+  <li><a href="#enforcement-responsibilities" id="toc-enforcement-responsibilities" class="nav-link" data-scroll-target="#enforcement-responsibilities">Enforcement Responsibilities</a></li>
+  <li><a href="#scope" id="toc-scope" class="nav-link" data-scroll-target="#scope">Scope</a></li>
+  <li><a href="#enforcement" id="toc-enforcement" class="nav-link" data-scroll-target="#enforcement">Enforcement</a></li>
+  <li><a href="#enforcement-guidelines" id="toc-enforcement-guidelines" class="nav-link" data-scroll-target="#enforcement-guidelines">Enforcement Guidelines</a>
   <ul class="collapse">
-  <li><a href="#correction" id="toc-correction" class="nav-link" data-scroll-target="#correction"><span class="header-section-number">1.6.1</span> 1. Correction</a></li>
-  <li><a href="#warning" id="toc-warning" class="nav-link" data-scroll-target="#warning"><span class="header-section-number">1.6.2</span> 2. Warning</a></li>
-  <li><a href="#temporary-ban" id="toc-temporary-ban" class="nav-link" data-scroll-target="#temporary-ban"><span class="header-section-number">1.6.3</span> 3. Temporary Ban</a></li>
-  <li><a href="#permanent-ban" id="toc-permanent-ban" class="nav-link" data-scroll-target="#permanent-ban"><span class="header-section-number">1.6.4</span> 4. Permanent Ban</a></li>
+  <li><a href="#correction" id="toc-correction" class="nav-link" data-scroll-target="#correction">1. Correction</a></li>
+  <li><a href="#warning" id="toc-warning" class="nav-link" data-scroll-target="#warning">2. Warning</a></li>
+  <li><a href="#temporary-ban" id="toc-temporary-ban" class="nav-link" data-scroll-target="#temporary-ban">3. Temporary Ban</a></li>
+  <li><a href="#permanent-ban" id="toc-permanent-ban" class="nav-link" data-scroll-target="#permanent-ban">4. Permanent Ban</a></li>
   </ul></li>
-  <li><a href="#attribution" id="toc-attribution" class="nav-link" data-scroll-target="#attribution"><span class="header-section-number">1.7</span> Attribution</a></li>
+  <li><a href="#attribution" id="toc-attribution" class="nav-link" data-scroll-target="#attribution">Attribution</a></li>
   </ul></li>
   </ul>
-<div class="toc-actions"><ul><li><a href="https://github.com/UCD-SERG/rpt/edit/main/CODE_OF_CONDUCT.md" class="toc-action"><i class="bi bi-github"></i>Edit this page</a></li><li><a href="https://github.com/UCD-SERG/rpt/blob/main/CODE_OF_CONDUCT.md" class="toc-action"><i class="bi empty"></i>View source</a></li><li><a href="https://github.com/UCD-SERG/rpt/issues/new" class="toc-action"><i class="bi empty"></i>Report an issue</a></li></ul></div></nav>
+<div class="toc-actions"><ul><li><a href="https://github.com/UCD-SERG/rpt/edit/main/CODE_OF_CONDUCT.md" class="toc-action"><i class="bi bi-github"></i>Edit this page</a></li><li><a href="https://github.com/UCD-SERG/rpt/blob/main/CODE_OF_CONDUCT.md" class="toc-action"><i class="bi empty"></i>View source</a></li><li><a href="https://github.com/UCD-SERG/rpt/issues/new" class="toc-action"><i class="bi empty"></i>Report an issue</a></li></ul></div><div class="quarto-alternate-formats"><h2>Other Formats</h2><ul><li><a href="CODE_OF_CONDUCT.docx"><i class="bi bi-file-word"></i>MS Word</a></li></ul></div></nav>
     </div>
 <!-- main -->
 <main class="content" id="quarto-document-content"><header id="title-block-header" class="quarto-title-block"></header>
@@ -408,15 +439,15 @@ ul.task-list li input[type="checkbox"] {
 
 
 
-<section id="contributor-covenant-code-of-conduct" class="level1" data-number="1">
-<h1 data-number="1"><span class="header-section-number">1</span> Contributor Covenant Code of Conduct</h1>
-<section id="our-pledge" class="level2" data-number="1.1">
-<h2 data-number="1.1" class="anchored" data-anchor-id="our-pledge"><span class="header-section-number">1.1</span> Our Pledge</h2>
+<section id="contributor-covenant-code-of-conduct" class="level1">
+<h1>Contributor Covenant Code of Conduct</h1>
+<section id="our-pledge" class="level2">
+<h2 class="anchored" data-anchor-id="our-pledge">Our Pledge</h2>
 <p>We as members, contributors, and leaders pledge to make participation in our community a harassment-free experience for everyone, regardless of age, body size, visible or invisible disability, ethnicity, sex characteristics, gender identity and expression, level of experience, education, socio-economic status, nationality, personal appearance, race, caste, color, religion, or sexual identity and orientation.</p>
 <p>We pledge to act and interact in ways that contribute to an open, welcoming, diverse, inclusive, and healthy community.</p>
 </section>
-<section id="our-standards" class="level2" data-number="1.2">
-<h2 data-number="1.2" class="anchored" data-anchor-id="our-standards"><span class="header-section-number">1.2</span> Our Standards</h2>
+<section id="our-standards" class="level2">
+<h2 class="anchored" data-anchor-id="our-standards">Our Standards</h2>
 <p>Examples of behavior that contributes to a positive environment for our community include:</p>
 <ul>
 <li>Demonstrating empathy and kindness toward other people</li>
@@ -434,46 +465,46 @@ ul.task-list li input[type="checkbox"] {
 <li>Other conduct which could reasonably be considered inappropriate in a professional setting</li>
 </ul>
 </section>
-<section id="enforcement-responsibilities" class="level2" data-number="1.3">
-<h2 data-number="1.3" class="anchored" data-anchor-id="enforcement-responsibilities"><span class="header-section-number">1.3</span> Enforcement Responsibilities</h2>
+<section id="enforcement-responsibilities" class="level2">
+<h2 class="anchored" data-anchor-id="enforcement-responsibilities">Enforcement Responsibilities</h2>
 <p>Community leaders are responsible for clarifying and enforcing our standards of acceptable behavior and will take appropriate and fair corrective action in response to any behavior that they deem inappropriate, threatening, offensive, or harmful.</p>
 <p>Community leaders have the right and responsibility to remove, edit, or reject comments, commits, code, wiki edits, issues, and other contributions that are not aligned to this Code of Conduct, and will communicate reasons for moderation decisions when appropriate.</p>
 </section>
-<section id="scope" class="level2" data-number="1.4">
-<h2 data-number="1.4" class="anchored" data-anchor-id="scope"><span class="header-section-number">1.4</span> Scope</h2>
+<section id="scope" class="level2">
+<h2 class="anchored" data-anchor-id="scope">Scope</h2>
 <p>This Code of Conduct applies within all community spaces, and also applies when an individual is officially representing the community in public spaces. Examples of representing our community include using an official e-mail address, posting via an official social media account, or acting as an appointed representative at an online or offline event.</p>
 </section>
-<section id="enforcement" class="level2" data-number="1.5">
-<h2 data-number="1.5" class="anchored" data-anchor-id="enforcement"><span class="header-section-number">1.5</span> Enforcement</h2>
+<section id="enforcement" class="level2">
+<h2 class="anchored" data-anchor-id="enforcement">Enforcement</h2>
 <p>Instances of abusive, harassing, or otherwise unacceptable behavior may be reported to the community leaders responsible for enforcement <a href="https://github.com/contact/report-content?content_url=https%3A%2F%2Fgithub.com%2FUCD-SERG%2Fserocalculator&amp;report=UCD-SERG+%28user%29">here</a>. All complaints will be reviewed and investigated promptly and fairly.</p>
 <p>All community leaders are obligated to respect the privacy and security of the reporter of any incident.</p>
 </section>
-<section id="enforcement-guidelines" class="level2" data-number="1.6">
-<h2 data-number="1.6" class="anchored" data-anchor-id="enforcement-guidelines"><span class="header-section-number">1.6</span> Enforcement Guidelines</h2>
+<section id="enforcement-guidelines" class="level2">
+<h2 class="anchored" data-anchor-id="enforcement-guidelines">Enforcement Guidelines</h2>
 <p>Community leaders will follow these Community Impact Guidelines in determining the consequences for any action they deem in violation of this Code of Conduct:</p>
-<section id="correction" class="level3" data-number="1.6.1">
-<h3 data-number="1.6.1" class="anchored" data-anchor-id="correction"><span class="header-section-number">1.6.1</span> 1. Correction</h3>
+<section id="correction" class="level3">
+<h3 class="anchored" data-anchor-id="correction">1. Correction</h3>
 <p><strong>Community Impact</strong>: Use of inappropriate language or other behavior deemed unprofessional or unwelcome in the community.</p>
 <p><strong>Consequence</strong>: A private, written warning from community leaders, providing clarity around the nature of the violation and an explanation of why the behavior was inappropriate. A public apology may be requested.</p>
 </section>
-<section id="warning" class="level3" data-number="1.6.2">
-<h3 data-number="1.6.2" class="anchored" data-anchor-id="warning"><span class="header-section-number">1.6.2</span> 2. Warning</h3>
+<section id="warning" class="level3">
+<h3 class="anchored" data-anchor-id="warning">2. Warning</h3>
 <p><strong>Community Impact</strong>: A violation through a single incident or series of actions.</p>
 <p><strong>Consequence</strong>: A warning with consequences for continued behavior. No interaction with the people involved, including unsolicited interaction with those enforcing the Code of Conduct, for a specified period of time. This includes avoiding interactions in community spaces as well as external channels like social media. Violating these terms may lead to a temporary or permanent ban.</p>
 </section>
-<section id="temporary-ban" class="level3" data-number="1.6.3">
-<h3 data-number="1.6.3" class="anchored" data-anchor-id="temporary-ban"><span class="header-section-number">1.6.3</span> 3. Temporary Ban</h3>
+<section id="temporary-ban" class="level3">
+<h3 class="anchored" data-anchor-id="temporary-ban">3. Temporary Ban</h3>
 <p><strong>Community Impact</strong>: A serious violation of community standards, including sustained inappropriate behavior.</p>
 <p><strong>Consequence</strong>: A temporary ban from any sort of interaction or public communication with the community for a specified period of time. No public or private interaction with the people involved, including unsolicited interaction with those enforcing the Code of Conduct, is allowed during this period. Violating these terms may lead to a permanent ban.</p>
 </section>
-<section id="permanent-ban" class="level3" data-number="1.6.4">
-<h3 data-number="1.6.4" class="anchored" data-anchor-id="permanent-ban"><span class="header-section-number">1.6.4</span> 4. Permanent Ban</h3>
+<section id="permanent-ban" class="level3">
+<h3 class="anchored" data-anchor-id="permanent-ban">4. Permanent Ban</h3>
 <p><strong>Community Impact</strong>: Demonstrating a pattern of violation of community standards, including sustained inappropriate behavior, harassment of an individual, or aggression toward or disparagement of classes of individuals.</p>
 <p><strong>Consequence</strong>: A permanent ban from any sort of public interaction within the community.</p>
 </section>
 </section>
-<section id="attribution" class="level2" data-number="1.7">
-<h2 data-number="1.7" class="anchored" data-anchor-id="attribution"><span class="header-section-number">1.7</span> Attribution</h2>
+<section id="attribution" class="level2">
+<h2 class="anchored" data-anchor-id="attribution">Attribution</h2>
 <p>This Code of Conduct is adapted from the <a href="https://www.contributor-covenant.org">Contributor Covenant</a>, version 2.1, available at <a href="https://www.contributor-covenant.org/version/2/1/code_of_conduct.html" class="uri">https://www.contributor-covenant.org/version/2/1/code_of_conduct.html</a>.</p>
 <p>Community Impact Guidelines were inspired by [Mozilla’s code of conduct enforcement ladder][https://github.com/mozilla/inclusion].</p>
 <p>For answers to common questions about this code of conduct, see the FAQ at <a href="https://www.contributor-covenant.org/faq" class="uri">https://www.contributor-covenant.org/faq</a>. Translations are available at <a href="https://www.contributor-covenant.org/translations" class="uri">https://www.contributor-covenant.org/translations</a>.</p>
