--- a/pr-preview/pr-45/NEWS.html
+++ b/pr-preview/pr-45/NEWS.html
@@ -42,9 +42,9 @@ ul.task-list li input[type="checkbox"] {
 <link href="site_libs/quarto-html/quarto-syntax-highlighting-ed96de9b727972fe78a7b5d16c58bf87.css" rel="stylesheet" class="quarto-color-scheme-extra" id="quarto-text-highlighting-styles">
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="site_libs/bootstrap/bootstrap-8fd1faf6fd93e4e6d207ae0f9db51d78.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme" id="quarto-bootstrap" data-mode="light">
-<link href="site_libs/bootstrap/bootstrap-dark-e7f4145358ce1d0cd37d8d374dbb44f9.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme quarto-color-alternate" id="quarto-bootstrap" data-mode="dark">
-<link href="site_libs/bootstrap/bootstrap-8fd1faf6fd93e4e6d207ae0f9db51d78.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme-extra" id="quarto-bootstrap" data-mode="light">
+<link href="site_libs/bootstrap/bootstrap-df175dff5e0603d307760d170d784760.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme" id="quarto-bootstrap" data-mode="light">
+<link href="site_libs/bootstrap/bootstrap-dark-700321e9dc9119e5e0d8e5dad4aa54f3.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme quarto-color-alternate" id="quarto-bootstrap" data-mode="dark">
+<link href="site_libs/bootstrap/bootstrap-df175dff5e0603d307760d170d784760.min.css" rel="stylesheet" append-hash="true" class="quarto-color-scheme-extra" id="quarto-bootstrap" data-mode="light">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -255,6 +255,31 @@ ul.task-list li input[type="checkbox"] {
   <span class="navbar-toggler-icon"></span>
 </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav navbar-nav-scroll me-auto">
+  <li class="nav-item">
+    <a class="nav-link active" href="./man/rpt-package.html" aria-current="page"> 
+<span class="menu-text">Documentation</span></a>
+  </li>  
+  <li class="nav-item dropdown ">
+    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-articles" role="link" data-bs-toggle="dropdown" aria-expanded="false">
+ <span class="menu-text">Articles</span>
+    </a>
+    <ul class="dropdown-menu" aria-labelledby="nav-menu-articles">    
+        <li>
+    <a class="dropdown-item" href="./vignettes/getting-started.html">
+ <span class="dropdown-text">Getting started</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./vignettes/quarto_vignette.html">
+ <span class="dropdown-text">Intro vignette</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./vignettes/articles/quarto_article.html">
+ <span class="dropdown-text">Advanced</span></a>
+  </li>  
+    </ul>
+  </li>
+</ul>
             <ul class="navbar-nav navbar-nav-scroll ms-auto">
   <li class="nav-item compact">
     <a class="nav-link" href="https://github.com/UCD-SERG/rpt"> <i class="bi bi-github" role="img" aria-label="rpt GitHub">
@@ -346,6 +371,12 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">example_function</span></a>
   </div>
 </li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./man/rpt-package.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">rpt-package</span></a>
+  </div>
+</li>
       </ul>
   </li>
         <li class="sidebar-item">
@@ -382,10 +413,10 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#rpt-development-version" id="toc-rpt-development-version" class="nav-link active" data-scroll-target="#rpt-development-version"><span class="header-section-number">1</span> rpt (development version)</a></li>
-  <li><a href="#rpt-0.0.0.9000" id="toc-rpt-0.0.0.9000" class="nav-link" data-scroll-target="#rpt-0.0.0.9000"><span class="header-section-number">2</span> rpt 0.0.0.9000</a></li>
+  <li><a href="#rpt-development-version" id="toc-rpt-development-version" class="nav-link active" data-scroll-target="#rpt-development-version">rpt (development version)</a></li>
+  <li><a href="#rpt-0.0.0.9000" id="toc-rpt-0.0.0.9000" class="nav-link" data-scroll-target="#rpt-0.0.0.9000">rpt 0.0.0.9000</a></li>
   </ul>
-<div class="toc-actions"><ul><li><a href="https://github.com/UCD-SERG/rpt/edit/main/NEWS.md" class="toc-action"><i class="bi bi-github"></i>Edit this page</a></li><li><a href="https://github.com/UCD-SERG/rpt/blob/main/NEWS.md" class="toc-action"><i class="bi empty"></i>View source</a></li><li><a href="https://github.com/UCD-SERG/rpt/issues/new" class="toc-action"><i class="bi empty"></i>Report an issue</a></li></ul></div></nav>
+<div class="toc-actions"><ul><li><a href="https://github.com/UCD-SERG/rpt/edit/main/NEWS.md" class="toc-action"><i class="bi bi-github"></i>Edit this page</a></li><li><a href="https://github.com/UCD-SERG/rpt/blob/main/NEWS.md" class="toc-action"><i class="bi empty"></i>View source</a></li><li><a href="https://github.com/UCD-SERG/rpt/issues/new" class="toc-action"><i class="bi empty"></i>Report an issue</a></li></ul></div><div class="quarto-alternate-formats"><h2>Other Formats</h2><ul><li><a href="NEWS.docx"><i class="bi bi-file-word"></i>MS Word</a></li></ul></div></nav>
     </div>
 <!-- main -->
 <main class="content" id="quarto-document-content"><header id="title-block-header" class="quarto-title-block"></header>
@@ -394,8 +425,8 @@ ul.task-list li input[type="checkbox"] {
 
 
 
-<section id="rpt-development-version" class="level1" data-number="1">
-<h1 data-number="1"><span class="header-section-number">1</span> rpt (development version)</h1>
+<section id="rpt-development-version" class="level1">
+<h1>rpt (development version)</h1>
 <ul>
 <li><p>Switched from <code>pkgdown</code> to <code>altdoc</code> (<a href="https://github.com/UCD-SERG/rpt/issues/45">#45</a>)</p></li>
 <li><p>Updated lintr configuration to match serodynamics reference with enhanced linter rules</p></li>
@@ -403,8 +434,8 @@ ul.task-list li input[type="checkbox"] {
 <li><p>Added RevealJS presentation format for Quarto vignettes and articles in pkgdown documentation. HTML pages now display an “Other Formats” section with links to slide versions (<a href="https://github.com/UCD-SERG/rpt/issues/29">#29</a>)</p></li>
 </ul>
 </section>
-<section id="rpt-0.0.0.9000" class="level1" data-number="2">
-<h1 data-number="2"><span class="header-section-number">2</span> rpt 0.0.0.9000</h1>
+<section id="rpt-0.0.0.9000" class="level1">
+<h1>rpt 0.0.0.9000</h1>
 <ul>
 <li>Initial development version</li>
 </ul>
